pasar objeto entre activities

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -15,6 +14,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Capitales"
         tools:targetApi="31">
+        <activity
+            android:name=".countryDetail.CountryDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".countryDetail.DogDetailActivity"
+            android:exported="false" />
         <activity
             android:name=".countryList.CountryListActivity"
             android:exported="true">
@@ -27,8 +32,6 @@
         <activity
             android:name=".MainActivity"
             android:exported="false" />
-
-
     </application>
 
 </manifest>
