--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,19 +15,20 @@
         android:theme="@style/Theme.Capitales"
         tools:targetApi="31">
         <activity
-            android:name=".countryDetail.CountryDetailActivity"
-            android:exported="false" />
-        <activity
-            android:name=".countryDetail.DogDetailActivity"
-            android:exported="false" />
-        <activity
-            android:name=".countryList.CountryListActivity"
+            android:name=".auth.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".countryDetail.CountryDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".countryList.CountryListActivity"
+            android:exported="false">
         </activity>
         <activity
             android:name=".MainActivity"
